# cric2vec

./: README.md  TODO.md  api.py  baseline.py  batter_pitcher2vec.md  combine_data.py  config.py  dataset.py  index.html  inference.py  ipl_combined.parquet  kohli_wickets.py  main.py  mapping.py  model.py  model_v2.py  names.csv  nba2vec.md  outcome_mapping.json  people.csv  player_mapping.csv  player_metadata.csv  player_metadata.py  pyproject.toml  team_mapping.csv  train_v2.py  venue_mapping.csv  visualize_web.py
checkpoints/: best_model_v2.pt  checkpoint_v2_ep100.pt  checkpoint_v2_ep20.pt  checkpoint_v2_ep40.pt  checkpoint_v2_ep60.pt  checkpoint_v2_ep80.pt  cric2vec_best.pth  cric2vec_epoch_100.pth  cric2vec_epoch_25.pth  cric2vec_epoch_50.pth  cric2vec_epoch_75.pth
ipl_male_csv2/: 1082606.csv  1216522.csv  1254113.csv  1254113_info.csv  1304050.csv  1304050_info.csv  1304055.csv  1304055_info.csv  1304059.csv  1304059_info.csv  1304083.csv  1304083_info.csv  1304088.csv  1304088_info.csv  1304091.csv  1304091_info.csv  1304099.csv  1304099_info.csv  1304103.csv  1304103_info.csv  1304109.csv  1304109_info.csv  1304112.csv  1304112_info.csv  1312198.csv  1312198_info.csv  1359475.csv  1359475_info.csv  1359476.csv  1359476_info.csv  1359477.csv  1359477_info.csv  1359478.csv  1359478_info.csv  1359479.csv  1359479_info.csv  1359480.csv  1359480_info.csv  1359481.csv  1359481_info.csv  (+446 more)
plots/: training_history.npz
web/: index.html  playground.js  script.js  style.css
wpl_json/: 1358929.json  1358930.json  1358931.json  1358932.json  1358933.json  1358934.json  (+69 more)
